# vnoid2022

./: CMakeLists.txt  README.md  aa.cpp  euler_to_quat.py
choreonoid/: CMakeLists.txt
choreonoid/include/: fast_walking_controller.hpp
choreonoid/project/: fast_walking_controller.cnoid
choreonoid/src/: fast_walking_controller.cpp
include/: actuated_joints.hpp  athletic_controller.hpp  biped_jump_foot_step_planner.hpp  biped_running_foot_step_planner.hpp  fast_walking_controller.hpp  fast_walking_params.hpp  jump_params.hpp  mpc_biped_jump.hpp  mpc_biped_running.hpp  mpc_jump_com_ref.hpp  mpc_params.hpp  stair_climbing_foot_step_planner.hpp  stair_climbing_params.hpp
model/sample_robot_description/body/: sample_robot_ver2_fixed_upper.body  sample_robot_ver2_fixed_upper_body.body  sample_robot_ver2_reduced.body
model/sample_robot_description/urdf/: sample_robot.urdf  sample_robot_fixed_upper_body.urdf  sample_robot_reduced.urdf
project/: athletic_controller.cnoid  athletic_controller.config.cnoid  fast_walking_controller.cnoid  fast_walking_controller.config.cnoid  vnoid_sample_project.cnoid
project/demos/ik1/: vnoid_demos_ik1_project.cnoid
pybullet/: check_reduced_model.py  fixed_upper_body_model_simulation.py  fixed_upper_body_model_simulator.py  reduced_model_simulation.py  reduced_model_simulation_fast_walk.py  reduced_model_simulation_fast_walk_raibert.py  reduced_model_simulation_terrain.py  reduced_model_simulator.py
src/: athletic_controller.cpp  biped_jump_foot_step_planner.cpp  biped_running_foot_step_planner.cpp  fast_walking_controller.cpp  mpc_biped_jump.cpp  mpc_jump_com_ref.cpp  stair_climbing_foot_step_planner.cpp
